# fanshim-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fanshim-lib/: Cargo.toml  README.md
fanshim-lib/src/: button.rs  config.rs  cpu.rs  error.rs  fan.rs  led.rs  lib.rs
fanshim-rs/: Cargo.toml
fanshim-rs/package_files/: PKGBUILD  fanshim-rs.1  fanshim-rs.toml
fanshim-rs/package_files/debian/: fanshim-rs.service
fanshim-rs/src/: main.rs
