[package]
name = "fanshim-lib"
version = "1.0.0"
authors = ["Vasily <vautkin@teknik.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
blinkt = "0.5.0"
toml = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
log = "0.4.11"

[dev-dependencies]
mockall = "0.8.1"
